feat: 카테고리별 상품 조회 기능 구현 및 엔티티 모델 리팩터링
- 카테고리 이름으로 상품 목록을 조회하는 기능을 구현
- Item과 Category 간의 다대다 관계를 ItemCategory 중간 테이블로 해소
- 모든 엔티티의 필드명을 Java 컨벤션에 맞는 CamelCase로 통일